--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- empieza el navbar -->
   <nav class="fadeInDown">
     <div>
-      <img src="../brand/images/logo.png" alt="logo">
+      <img src="./images/logo.png" alt="logo">
     </div>
     <div>
       <ul>
