--- a/venta.html
+++ b/venta.html
@@ -16,7 +16,7 @@
   <nav class="fadeInDown">
     <div>
       <a href="index.html">
-        <img src="../brand/images/logo.png" alt="logo">
+        <img src="images/logo.png" alt="logo">
       </a>
     </div>
     <div>
