Correccion de responsive

--- a/producto.html
+++ b/producto.html
@@ -28,7 +28,7 @@
   </nav>
   <!-- end of navbar -->
   <!-- contenedor grid -->
-  <div class="container">
+  <div class="container" style="justify-self: center">
     <div class="title">
       <h1>Productos</h1>
     </div>
@@ -53,9 +53,7 @@
         <h2>Producto 3</h2>
         <p>Miles de productos hay en el mercado, pero nada como una caja con gatitos, Miles de productos hay en el mercado, pero nada como una caja con gatitos</p>
       </div>
-      
-
-  </div>
+    </div>
   <!-- start footer -->
   <footer> 
       <a href="#">
