--- a/venta.html
+++ b/venta.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"> -->
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="./estilos/grid.css">
   <link rel="stylesheet" href="./estilos/norm-estilos.css">
   <link rel="stylesheet" href="./estilos/estilos.css">
@@ -12,57 +14,61 @@
   <title>Brand</title>
 </head>
 <body>
-  <!-- empieza el navbar -->
-  <nav class="fadeInDown">
-    <div>
-      <a href="index.html">
-        <img src="images/logo.png" alt="logo">
-      </a>
-    </div>
-    <div>
-      <ul>
-        <a href="#"><li>Faqs</li></a>
-        <a href="producto.html"><li>Producto y Descripción</li></a>
-      </ul>
-    </div>
-  </nav>
-  <!-- end of navbar -->
-  <!-- Empieza formulario venta -->
-  
-  <div class="container_form">
-
-    <div class="res_venta">
-      <div class="venta_image">
-        <img src="./images/box2.png" alt="">
+  <header>
+    <nav class="fadeInDown">
+      <div>
+        <a href="index.html">
+          <img src="images/logo.png" alt="logo">
+        </a>
       </div>
-      <h2>Producto</h2>
-      <p>Miles de productos hay en el mercado , pero nada como una caja con gatitos</p>
+      <div>
+        <ul>
+          <a href="#"><li>Faqs</li></a>
+          <a href="producto.html"><li>Producto y Descripción</li></a>
+        </ul>
+      </div>
+    </nav>
+    <!-- end of navbar -->
+  </header><!-- empieza el navbar -->
+    <!-- Empieza formulario venta -->
+  <main class="mt-5">
+    <div class="p-4 mt-5 flex-container">
+      <!-- <div class="container"> -->
+        <div class="row justify-content-evenly">
+          <div class="card col col-12 col-md-5 mb-4">
+            <div class="card-body">
+
+              <div class="venta_image">
+                <img src="./images/box2.png" alt="">
+              </div>
+              <h2>Producto</h2>
+              <p>Miles de productos hay en el mercado , pero nada como una caja con gatitos</p>
+            </div>
+          </div>
+          <div class="card col-12 col-md-5">
+            <form class="card-body" action="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=D26EXNGF3H4X4" method="POST">
+              <label class="form-label" for="first_name">Nombre</label>
+              <input class="form-control mb-3" type="text" placeholder="" name="first_name" value="">
+              <label for="email">E-mail</label>
+              <input class="form-control mb-3" type="email" placeholder="" name="email" class="data" value="">
+              <label for="nigth_phone_a">Teléfono</label><br>
+              <input class="form-control mb-3" type="number" name="" class="data" value="">
+              <button type="submit" class="main_button">Confirmar Pago</button>
+            </form>
+          </div>
+        </div>    
+      <!-- </div> -->
     </div>
-    <div class="modulo_pago">
-      <form action="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=D26EXNGF3H4X4" method="POST">
-        <label for="first_name">Nombre</label><br>
-        <input type="text" placeholder="" name="first_name" value="">
-        <br>
-        <label for="email">E-mail</label><br>
-        <input type="email" placeholder="" name="email" class="data" value="">
-        <br>
-        <label for="nigth_phone_a">Teléfono</label><br>
-        <input type="number" name="" class="data" value="">
-        <br>
-        <button type="submit" class="main_button">Confirmar Pago</button>
-
-      </form>
-    </div>
-
-  </div>
-
+  </main>
   <!-- start footer -->
   <footer> 
-      <a href="#">
-        <p>Terminos y condiciones</p>
-      </a>
-      <a href="mailto:contacto@email.com">contacto@email.com</a>
+    <a href="#">
+      <p>Terminos y condiciones</p>
+    </a>
+    <a href="mailto:contacto@email.com">contacto@email.com</a>
   </footer>
-  <script src=""></script>
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
+  
